<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="com.iteda.rawapp.ForgetPass"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PasswordReset"
            android:background="#26000000"
            android:layout_gravity="center"
            android:textSize="25sp"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_Mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:visibility = "visible"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_ResPass1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SendEmail"
            android:layout_gravity="center"
            android:visibility = "visible"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/EditT_code2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EmailCode"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:visibility = "gone"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_ResPass2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PasswordReset"
            android:layout_gravity="center"
            android:visibility = "gone"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="false"
            >
            <EditText
                android:id="@+id/EditT_Pass1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:visibility = "gone"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="false"
            >
            <EditText
                android:id="@+id/EditT_Pass2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ConfirmPassword"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:visibility = "gone"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_ResPass3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ChangePassword"
            android:layout_gravity="center"
            android:visibility = "gone"
            />

    </LinearLayout>
</ScrollView>